--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>base</module>
     <module>spring</module>
       <module>rabbitmaq</module>
+      <module>log4j</module>
   </modules>
 
 </project>
