自动生成java代码

--- a/mybaits-plus/mybatis-plus-generator/pom.xml
+++ b/mybaits-plus/mybatis-plus-generator/pom.xml
@@ -5,9 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.pdaodao</groupId>
-        <artifactId>backEnd</artifactId>
+        <artifactId>mybaits-plus</artifactId>
         <version>1.0</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>mybatis-plus-generator</artifactId>
@@ -28,10 +27,14 @@
             <artifactId>mybatis-plus</artifactId>
             <version>3.5.2</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>8.0.31</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.31</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
