--- a/springsecurity5/pom.xml
+++ b/springsecurity5/pom.xml
@@ -89,7 +89,7 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-oauth2-authorization-server</artifactId>
-                <version>1.0.2</version>
+                <version></version>
             </dependency>
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
