--- a/springsecurity5/server5/pom.xml
+++ b/springsecurity5/server5/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-authorization-server</artifactId>
+            <version>0.4.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
